--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -10,14 +10,31 @@
 }
 
 .headerLeft > img {
-    width : 10%;
+    width : 40px;
+    height: 40px;
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
-.headerLeft > input {
-    width : 70%;
+.search-bar{
+    width : 40%;
+    height: 42px;
     background-color: #eeee;
     border-radius: 30px;
+    box-sizing: border-box;
+    padding: 10px;
     vertical-align: bottom;
+}
+
+.search-bar > img {
+    width: 26px;
+    height: 26px;
+    margin-right: 15px;
+    display: inline-block;
+}
+
+.search-bar > input {
+    width: 252px;
+    height: 22px;
+    background-color: #eeee;
 }
