--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -6,8 +6,9 @@
 }
 
 .headerLeft{
-    width : 25%;
+    float: left;
 }
+
 
 .headerLeft > img {
     width : 40px;
@@ -17,7 +18,6 @@
 }
 
 .search-bar{
-    width : 40%;
     height: 42px;
     background-color: #eeee;
     border-radius: 30px;
@@ -37,4 +37,22 @@
     width: 252px;
     height: 22px;
     background-color: #eeee;
+}
+
+
+
+
+.headerCenter{
+    width: 500px;
+    float: left;
+}
+
+.headerCenter > li{
+    display: inline-block;
+    padding: 25px;
+}
+
+.headerCenter > li > img{
+    width: 25px;
+    height: 25px;
 }
