--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -12,10 +12,14 @@
     padding: 10px;
 }
 
-.card-container > video {
+.video-container {
     width: 100%;
-    max-height: 630px;
-    box-sizing: border-box;
+    max-height: 700px;
+    object-fit: cover;
+}
+
+.content{
+    margin-bottom: 20px;
 }
 
 
