--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,7 +1,6 @@
 .main{
     width : 100%;
     box-sizing: border-box;
-    position : fixed;
 }
 
 .headerLeft{
@@ -15,6 +14,7 @@
     width : 40px;
     height: 40px;
     display: inline-block;
+    padding-top: 5px;
     margin-right: 10px;
 }
 
