--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -85,3 +85,25 @@
     height: 30px;
 }
 
+
+.title-container{
+    margin-bottom: 20px;
+}
+
+
+.profile{
+    width: 30px;
+    float: left;
+    margin-right: 20px;
+}
+
+.profile > img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+.title-container > p{
+    display: inline-block;
+    margin-top: 4.5px;
+}
+
