--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -134,3 +134,41 @@
     display: inline-block;
 }
 
+
+
+.cmt-container{
+    margin-bottom: 20px;
+}
+
+
+.cmt-profile{
+    width: 30px;
+    float: left;
+    padding: 3px 0px 3px 0px;
+    margin-right: 10px;
+}
+
+.cmt-profile > img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+
+
+.cmt-container > p{
+    display: inline-block;
+    background-color: #f0f2f5;
+    max-width: 390px;
+    padding: 8px 12px 8px 12px;
+    border-radius: 30px;
+}
+
+.cmt-btn{
+    margin-right: 15px;
+}
+
+.cmt-input{
+    width: 318px;
+}
+
+
